Email_Spam_Detection_with_Machine_Learning.ipynb

--- a/Email_Spam_Detection_with_Machine_Learning.ipynb
+++ b/Email_Spam_Detection_with_Machine_Learning.ipynb
@@ -16,10 +16,8 @@
       },
       "source": [
         "##### **Project Type**    - Classification\n",
-        "##### **Industry**    - Oasis Infobyte\n",
-        "##### **Contribution**    - Individual\n",
-        "##### **Member Name -** Arindam Paul\n",
-        "##### **Task -** 4"
+        "##### **Contribution**    - Uday\n",
+        "##### **Member Name -** Uday\n"
       ]
     },
     {
